[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Props/Spikes/spike.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Props/obstacle.png" type="Texture" id=2]
[ext_resource path="res://assets/Props/Plaformas/moving_platform.gd" type="Script" id=3]
[ext_resource path="res://assets/Props/Plaformas/moving_platform_desaparecer.tres" type="Animation" id=4]
[ext_resource path="res://assets/Props/Plaformas/moving_platform_aparecer.tres" type="Animation" id=5]
[ext_resource path="res://assets/Sonidos/fx_plataforma.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/Sonidos/fx_dead.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.00006, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBase:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="moving_platform" type="Node2D" groups=[
"plataforma",
]]
script = ExtResource( 3 )

[node name="plataform" type="KinematicBody2D" parent="."]
position = Vector2( 0, 3.49691e-07 )
rotation = 3.57628e-06
collision_layer = 4
collision_mask = 3
motion/sync_to_physics = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="plataform"]
position = Vector2( 0, -3.49692e-07 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="plataform"]
input_pickable = false
collision_layer = 16
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataform/Area2D"]
position = Vector2( -2.86102e-05, -8 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="plataform"]
input_pickable = false
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataform/Area2D2"]
position = Vector2( 2.86102e-05, 8 )
shape = SubResource( 2 )

[node name="SpriteBase" type="Node2D" parent="plataform"]
position = Vector2( 0, -3.4969e-07 )

[node name="sprite" type="Sprite" parent="plataform/SpriteBase"]
light_mask = 4
texture = ExtResource( 2 )
offset = Vector2( -7.97029, 2.8499e-05 )

[node name="obstacle" type="Sprite" parent="plataform/SpriteBase"]
light_mask = 4
position = Vector2( 0, -3.63798e-12 )
texture = ExtResource( 2 )
offset = Vector2( 8.02971, 2.8499e-05 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="plataform"]
autoplay = "Idle"
playback_process_mode = 0
playback_speed = 3.0
anims/Aparecer = ExtResource( 5 )
anims/Desaparecer = ExtResource( 4 )
anims/Idle = SubResource( 3 )

[node name="TimerAparecer" type="Timer" parent="plataform"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="Spikes" type="Node2D" parent="plataform"]
visible = false

[node name="spike" parent="plataform/Spikes" instance=ExtResource( 1 )]
position = Vector2( -7.99994, 16 )
rotation = -3.14159

[node name="spike2" parent="plataform/Spikes" instance=ExtResource( 1 )]
position = Vector2( 8.00006, 16 )
rotation = -3.14159

[node name="move_tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 10, 10 )

[node name="fxMover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.49
max_distance = 500.0
attenuation = 0.406126

[node name="fxDead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0
pitch_scale = 0.5
bus = "Plataformas"

[connection signal="body_entered" from="plataform/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="plataform/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="plataform/Area2D2" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="plataform/Area2D2" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="plataform/TimerAparecer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="move_tween" to="." method="_on_move_tween_tween_all_completed"]
[connection signal="tween_completed" from="move_tween" to="." method="_on_move_tween_tween_completed"]
[connection signal="tween_started" from="move_tween" to="." method="_on_move_tween_tween_started"]
